WEB-8991: Prevent the categorize urls button on the webcat research page from truncating at smaller view sizes.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -5693,6 +5693,10 @@ input.table-entry-input:focus {
 
   .webcat-research-categorize-url-button {
     background-image: url(image_path('icon_categorize.svg'));
+
+    span.toolbar-button-text {
+      display: block;
+    }
   }
 
   .dropdown.open > .webcat-research-categorize-url-button {
